change to INFO level by default

--- a/config/public.properties
+++ b/config/public.properties
@@ -1,5 +1,5 @@
 # props loaded when building test profile
-log.level=DEBUG
+log.level=INFO
 db.url=jdbc:mysql://localhost/base
 db.user=baseread
 db.pwd=
