--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
 	<licenses>
 		<license>
-			<name>GPLv3</name>
-			<url><![CDATA[http://www.gnu.org/copyleft/gpl.html]]></url>
+			<name>MIT</name>
+			<url><![CDATA[https://opensource.org/licenses/MIT]]></url>
 		</license>
 	</licenses>
 
@@ -27,7 +27,10 @@
 		by maven, this is performed by the src/shell/install-picard-deps-in-mvn-repos_from-git.sh 
 		(you need to adapt path in there first !) The script also takes care of replacing 
 		the jars in Je/lib to make sure we always distribute with the right custom 
-		picard jars You can now build Je ! -->
+		picard jars You can now build Je ! 
+		
+		TODO : Good news, my changes have been merged in picard so you should be able to switch to normal picard at next picard release
+	-->
 
 
 
@@ -76,10 +79,12 @@
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
-
 				</configuration>
-				<!-- Bind to packaging phase: the package phase will now produce 2 jars 
-					: - the 'usual' one - one with all dependencies bundled -->
+				<!-- 			
+				Bind to packaging phase: the package phase will now produce 2 jars: 
+					- the 'usual' one 
+					- one with all dependencies bundled 
+				-->
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -89,7 +94,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
+		</plugins> 
 	</build>
 
 
